# codecrafters-interpreter-rust

./: Cargo.toml
lox-ast/: Cargo.toml
lox-ast/src/ast/: attribute.rs  expr.rs  ident.rs  item.rs  stmt.rs
lox-ast/src/parser/: parser.rs
lox-ast/src/parser/parse/: expr.rs  item.rs  stmt.rs
lox-interpreter/: Cargo.toml
lox-interpreter/src/: environment.rs  interpreter.rs  lib.rs  resolver.rs  value.rs
lox-interpreter/src/eval/: expr.rs  item.rs  mod.rs  stmt.rs
lox-interpreter/src/std_lib/: clock.rs  mod.rs
lox-interpreter/src/value/: class.rs  mod.rs  value.rs
lox-shared/src/: error.rs
src/: context.rs  error.rs  lib.rs  main.rs  program.rs  tokenizer.rs  variable.rs
src/ast/: block.rs  expressions.rs  item.rs  mod.rs  statement.rs  stmt.rs
src/ast/expression/: evaluate.rs  expr.rs  mod.rs  parse.rs
src/ast/expressions/: group.rs  literal.rs  mod.rs  unary.rs
src/ast/parse/: expr.rs  item.rs  mod.rs  stmt.rs  token_stream.rs
src/ast/parser/: mod.rs  token_stream.rs
src/expression/: evaluate.rs  expr.rs  mod.rs  parse.rs
src/expressions/: expr.rs  literal.rs  mod.rs
src/native/: mod.rs  time.rs
src/runtime/: compiler.rs  environment.rs  loxtype.rs  mod.rs  program.rs  resolver.rs  scope.rs
src/runtime/evaluate/: expr.rs  item.rs  mod.rs  stmt.rs
src/runtime/interpreter/: expr.rs  item.rs  mod.rs  stmt.rs
src/statements/: basic.rs  mod.rs  print.rs  program.rs
src/tokenizer/: mod.rs  reserved_words.rs  symbols.rs
src/tokens/: lexer.rs  mod.rs  parse.rs  reserved_words.rs  symbols.rs  token.rs  tokenize.rs
(+3 files in other folders)
