[package]
name = "codecrafters-interpreter"
version = "0.1.0"
authors = ["Codecrafters <hello@codecrafters.io>"]
edition = "2021"
rust-version = "1.80"

[dependencies]
anyhow = { workspace = true }
thiserror = { workspace = true }
hashbrown = { workspace = true }
bytes = { workspace = true }

[workspace]
resolver = "2"
members = ["lox-ast", "lox-interpreter", "lox-shared"]

[workspace.dependencies]
anyhow = "1.0.68"    # error handling
bytes = "1.3.0"      # helps manage buffers
hashbrown = "0.16.0"
thiserror = "1.0.38" # error handling
